--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ itertools = "0.9"
 crossterm = "0.18"
 fancy-regex = "0.4"
 signal-hook = "0.1"
+textwrap = "0.12"
 
 
 # config parsing, must be independent of features
